--- a/config.json
+++ b/config.json
@@ -8,5 +8,6 @@
   "device": "cpu",
   "min_count": 5,
   "coh_every_steps": 0,
-  "coh_eps": 1e-12
+  "coh_eps": 1e-12,
+  "log_coh_every_epoch": true
 }
